Enhance project structure and add backend support
- Updated ecosystem.config.js to include a new backend service configuration for development.
- Modified package.json to support backend workspace and added new scripts for backend development and build processes.
- Updated frontend package.json to include new dependencies: react-router-dom, socket.io-client, and axios for improved routing and real-time communication.
- Refactored App.tsx to implement routing with protected routes for login and game pages.

These changes improve the overall project structure, enabling a more robust development experience with both frontend and backend capabilities.

--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "version": "1.0.0",
   "description": "Tower Tamer RPG - Mobile-first web-based RPG game",
   "workspaces": [
-    "frontend"
+    "frontend",
+    "backend"
   ],
   "scripts": {
     "dev": "yarn workspace frontend dev",
     "dev:frontend": "yarn workspace frontend dev",
-    "build": "yarn workspace frontend build",
+    "dev:backend": "yarn workspace @towertamer/backend dev",
+    "build": "yarn workspaces run build",
     "build:frontend": "yarn workspace frontend build",
+    "build:backend": "yarn workspace @towertamer/backend build",
     "test": "yarn workspace frontend test",
     "test:frontend": "yarn workspace frontend test",
-    "lint": "yarn workspace frontend lint",
-    "lint:frontend": "yarn workspace frontend lint"
+    "lint": "yarn workspaces run lint",
+    "lint:frontend": "yarn workspace frontend lint",
+    "lint:backend": "yarn workspace @towertamer/backend lint"
   },
   "engines": {
     "node": ">=18.0.0",
