--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,10 @@
   },
   "dependencies": {
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.1.2",
+    "socket.io-client": "^4.6.1",
+    "axios": "^1.6.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
